--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <a href="training.html">Обучение</a>
             <a href="events.html">События</a>
             <a href="players.html">Игроки</a>
-            <a href="contact.html">Контакты</a>
             <a href="calculator.html">Калькулятор</a>
+            <a href="bot.html">Бот</a>
+            <a href="contact.html">Контакты</a>
         </div>
     </nav>
 
