Adding heroes shooters and infantry

--- a/training.html
+++ b/training.html
@@ -165,6 +165,72 @@
                         <figcaption>Софи</figcaption>
                     </figure>
                     <p>Герой отряда стрелков, требующий меньше ярости для навыков. Имеет высокую выроботку урона.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-15.jpg" alt="Нора">
+                        <figcaption>Нора</figcaption>
+                    </figure>
+                    <p>Герой отряда стрелков, который добавляет атаку и защиту отряду.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-47.jpg" alt="Джек Бронте">
+                        <figcaption>Джек Бронте</figcaption>
+                    </figure>
+                    <p>Хороший герой для битвы в поле, который имеет не плохую атаку и скорость отряда.</p>
+                    <h3>Пехота</h3>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-09.jpg" alt="Том">
+                        <figcaption>Том</figcaption>
+                    </figure>
+                    <p>Сильнейшая команда отряда пехоты. Умеет нападать и защищаться.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-25.jpg" alt="Райгоро">
+                        <figcaption>Райгоро</figcaption>
+                    </figure>
+                    <p>Сильнейшая команда отряда пехоты. Превосходная ЗАЩ и стойкость.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-40.jpg" alt="Адут">
+                        <figcaption>Адут</figcaption>
+                    </figure>
+                    <p>Сильнейшая команда отряда пехоты. Хорошо подходит для нападения и защиты.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-04.jpg" alt="Роберт">
+                        <figcaption>Роберт</figcaption>
+                    </figure>
+                    <p>Герой пехотного отряда, превосходный для нанесения отрицательных эффектов врагу.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-32.jpg" alt="Марко и Эри">
+                        <figcaption>Марко и Эри</figcaption>
+                    </figure>
+                    <p>Хорошо подходит для нападения и защиты.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-41.jpg" alt="Петерсон Гром">
+                        <figcaption>Петерсон Гром</figcaption>
+                    </figure>
+                    <p>Сильнейшая команда защиты. Высокое исцеление.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-43.jpg" alt="Эдди">
+                        <figcaption>Эдди</figcaption>
+                    </figure>
+                    <p>Герой пехотного отряда с мощными способностями защиты и контратаки.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-45.jpg" alt="Ривен">
+                        <figcaption>Ривен</figcaption>
+                    </figure>
+                    <p>Герой пехотного отряда, который наносит урон и имеет сильный щит.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-46.jpg" alt="Миямото Доичи">
+                        <figcaption>Миямото Доичи</figcaption>
+                    </figure>
+                    <p>Герой пехотного отряда, который наносит урон нескольким целям.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-52.jpg" alt="Стелла">
+                        <figcaption>Стелла</figcaption>
+                    </figure>
+                    <p>Герой пехотного отряда с сильной выроботкой урона.</p>
+                    <figure>
+                        <img src="Photo/photo_2025-03-01_20-35-54.jpg" alt="Бодала">
+                        <figcaption>Бодала</figcaption>
+                    </figure>
+                    <p>Герой пехотного отряда с щитом, который выдерживает огромный урон.</p>
                 </p>
             </div>
         </div>
